# GeoRocData

./: .gitignore  CHANGELOG.md  README.md  back.sh  d.csv  links.sh  pyproject.toml
2020-5-23/: Adakite.xlsx  Anakaramite.xlsx  Basanite.xlsx  Benmoreite.xlsx  Boninite.xlsx  Carnonatite.xlsx  Comendite.xlsx  Dacite.xlsx  Diabase.xlsx  Dolerite.xlsx  Hawaiite.xlsx  Kimberlite.xlsx  Komatiite.xlsx  Lamprophyre.xlsx  Latite.xlsx  Mugearite.xlsx  Nephelinite.xlsx  Oceanite.xlsx  Pantellerite.xlsx  Phonolite.xlsx  Phonotephrite.xlsx  Phoscorite.xlsx  Picrite.xlsx  Rhyodacite.xlsx  Shoshonite.xlsx  Tephrite.xlsx  Tholeiite.xlsx  TranchyBasalt.xlsx  Tranchyandesite.xlsx  Tranchyte.xlsx
2023-12-01/: 原始页面.md  目录结构和中英对照参考翻译.csv
DB_Gen/: 0_Get_Data_Fix_Quota_Error.py  10_DB_Remove_LOI.py  11_DB_Constant_Sum_Effect.py  12_TAS_kde_each_bad_bandwidth.py  12_TAS_kde_each_mesh.py  13_TAS_kde_each_adaptive_bandwidth.py  14_TAS_kde_all.py  15_TAS_GS.py  16_TAS_Sample.py  17_TAS_Evaluate.py  18_TAS_Sample_Repeatly.py  19_TAS_GS_Bulk.py  1_Split_CSV.py  20_TAS_GS_v2.py  21_GeoChem_GS.py  22_Epistemology.py  23_Classifiers_Compare.py  24_Make_Figures.py  25_Representation_Comparison.py  2_Add_Type.py  3_CSV_to_DB.py  4_REF_to_DB.py  5_DB_Stats.py  6_DB_Harker.py  7_DB_TAS.py  8_DB_TAS_Base.py  9_DB_Pearce_Base.py  A_Magical_Trip.ipynb  Geochemistry.xlsx  TAS_Base_PLU_Withlines.pkl  TAS_kde_all.py  TAS_kde_all_nokde.py  TAS_kde_all_nolines.py  TAS_kde_each.py  TAS_kde_each_gray.py  update_georoc.py
DB_Gen/Color_Config/: Granite_color_dict.json  MakeColorMap.py  VOL_color_dict.json
DB_Gen/Harker/: PLU_color_dict.json
DB_Gen/PLU_GMS_kde/: Diabase_kde.pkl  Diorite_kde.pkl  Dolerite_kde.pkl  Gabbro_kde.pkl  Granite_kde.pkl  Granodiorite_kde.pkl  Lamprophyre_kde.pkl  Pyroxenite_kde.pkl  Tonalite_kde.pkl
DB_Gen/PLU_GM_median_kde/: Diabase_median_kde.pkl  Diorite_median_kde.pkl  Dolerite_median_kde.pkl  Gabbro_median_kde.pkl  Granite_median_kde.pkl  Granodiorite_median_kde.pkl  Lamprophyre_median_kde.pkl  Pyroxenite_median_kde.pkl  Tonalite_median_kde.pkl
DB_Gen/PLU_GM_silver_kde/: Diabase_silverman_kde.pkl  Diorite_silverman_kde.pkl  Dolerite_silverman_kde.pkl  Gabbro_silverman_kde.pkl  Granite_silverman_kde.pkl  Granodiorite_silverman_kde.pkl  Lamprophyre_silverman_kde.pkl  Pyroxenite_silverman_kde.pkl  Tonalite_silverman_kde.pkl
DB_Gen/Pearce/: Pearce_Base_Granite_Withlines.pkl
DB_Gen/Plot_Json/: GetLimit.py  pearce_cord.json  tas_cord.json
DB_Gen/TAS/: TAS_Base_PLU_No_Colors.pkl  TAS_Base_PLU_Nolines.pkl  TAS_Base_PLU_Nolines_Nocolors.pkl  TAS_Base_PLU_Withlines.pkl  TAS_Base_PLU_Withlines_Nocolors.pkl  TAS_Base_PLU_Withlines_heat.pkl  TAS_Base_PLU_Withlines_original.pkl  TAS_Base_PLU_Withlines_renew.pkl  TAS_Base_VOL_No_Colors.pkl  TAS_Base_VOL_Nolines_Nocolors.pkl  TAS_Base_VOL_Withlines_Nocolors.pkl
DB_Gen/VOL_GMS_kde/: Adakite_kde.pkl  Andesite_kde.pkl  Basalt_kde.pkl  Basanite_kde.pkl  Boninite_kde.pkl  Dacite_kde.pkl  Hawaiite_kde.pkl  Kimberlite_kde.pkl  Komatiite_kde.pkl  Latite_kde.pkl  (+12 more)
Expert/: Clynne2008.xls  DuBray_DataSeries155_VolcanicRocksCascades.xls  DuBray_DataSeries244_IntrusiveRocksCascades.xls  Mamani09_Table_DR2.xls
IGE/: IGNEOUS DATA BASE (IGBA) and SEDIMENTARY DATA BASE SEDBA.md  structur.txt
(+301 files in other folders)
