[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georocdata"
version = "0.2.0"
description = "GEOROC database downloader, processor, and SQLite converter for geochemical rock data"
readme = "README.md"
license = {text = "GPLv3+"}
requires-python = ">=3.8"
authors = [
    {name = "GeoPyTool Team", email = "geopytool@gmail.com"},
]
keywords = [
    "georoc",
    "geochemistry",
    "petrology",
    "volcanology",
    "igneous",
    "rock",
    "mineral",
    "database",
    "sqlite",
    "earth-science",
    "geoscience",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Environment :: Console",
]
dependencies = [
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.scripts]
georocdata = "georocdata.cli:main"

[project.urls]
Homepage = "https://github.com/GeoPyTool/GeoRocData"
Repository = "https://github.com/GeoPyTool/GeoRocData"
"Bug Tracker" = "https://github.com/GeoPyTool/GeoRocData/issues"
Changelog = "https://github.com/GeoPyTool/GeoRocData/blob/main/CHANGELOG.md"
Documentation = "https://github.com/GeoPyTool/GeoRocData#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
georocdata = ["data/*.csv"]